syntax = "proto3";

service DiztlService {
    rpc Search (SearchReq) returns (SearchResp) {
    }
    rpc Upload (DownloadReq) returns (stream FileChunk) {
    }
}

service TrackerService {
    rpc Register (Node) returns (Node) {
    }
    rpc Search (SearchReq) returns (stream SearchResp) {
    }
    rpc disconnect (DisconnectReq) returns (DisconnectResp) {
    }
}

message Node {
    string ip = 1;
    string id = 2;
}

message FileMetadata {
    string path = 1;
    int32 id = 2;
    int64 size = 3;
    int32 chunks = 4;
    string name = 5;
}

message FileChunk {
    FileMetadata metadata = 1;
    bytes data = 2;
    int32 chunk = 3;
}

message SearchReq {
    string filename = 1;
    Node source = 2;
}

message SearchResp {
    repeated FileMetadata files = 1;
    Node node = 2;
}

message DownloadReq {
    Node source = 1;
    FileMetadata metadata = 2;
}

message DisconnectReq {
    Node node = 1;
}

message DisconnectResp {
    string message = 1;
}